<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBitcoinToDollarRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/project_margin"
        android:layout_marginTop="@dimen/project_big_margin"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/project_margin"
        android:layout_marginTop="@dimen/project_min_margin"
        android:layout_marginEnd="@dimen/project_min_margin"
        android:fontFamily="sans-serif-black"
        tools:text="Balance: 0"
        android:textSize="@dimen/balance_text_size"
        app:layout_constraintEnd_toStartOf="@+id/ic_bitcoin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBitcoinToDollarRate" />

    <ImageView
        android:id="@+id/ic_bitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bitcoin"
        app:layout_constraintEnd_toStartOf="@+id/btn_deposit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBitcoinToDollarRate" />

    <Button
        android:id="@+id/btn_deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/project_margin"
        android:text="@string/plus_add"
        app:layout_constraintBottom_toBottomOf="@id/tv_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_balance" />

    <Button
        android:id="@+id/btnAddTransaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/project_margin"
        android:layout_marginTop="@dimen/project_big_margin"
        android:layout_marginEnd="@dimen/project_margin"
        android:text="@string/make_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_balance" />

    <TextView
        android:id="@+id/tvTransactionListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/project_margin"
        android:text="@string/transaction_list"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddTransaction" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_transaction_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/project_margin"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTransactionListTitle"
        tools:listitem="@layout/item_transaction" />

</androidx.constraintlayout.widget.ConstraintLayout>
